--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,4 @@
-
+<html>
+  <h1>Дак вот, обо мне.</h1>
+  <p>Я Илья 11 лет. Живу на урале. Занимаюсь на алгоритмике и обучаюсь там програмированнию на hmtl а также занимаюсь робото-техникой. писать целую статью лень. это всё!</p>
+</html>
