--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <Html>
   <h1>Здраствуйте. Я Илья. Начинающий создатель сайтов и геймер.</h1>
-  <a href=>
+  <a href=https://whoismegamer.github.io/free-potatoWhy/index1>Обо мне.</a>
 </Html>
