--- a/index1488.html
+++ b/index1488.html
@@ -1,4 +1,4 @@
 <html>
-  <h1>АААААААААААААА ПАСХАЛКО!!!!!! ПАСКАЛКО!!!!!!!!!</h1>
+  <h1>АААААААААААААА ПАСХАЛКО!!!!!! ПАСХАЛКО!!!!!!!!!</h1>
   <img src="https://images.steamusercontent.com/ugc/2462978868434720938/02678095CA73DBB5FED52C2E9A7939D0EC42AC20/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false">
 </html>
