--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <Html>
   <h3><a href="https://whoismegamer.github.io/free-potatoWhy/index1">Обо мне.</a></h3>
   <h1 style="backround-color: ghostwhite; color: red"><i>Изучаем английский язык.</i></h1>
+  <h2 style="color: red">Обратите внимание!</h2>
+  <h2>Здесь не полная инфаормация о английском языке. Поищите  лучше в интернете.</h2>
   
 </Html>
