--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <Html>
+  <header>Английский язык</header>
   <h3><a href="https://whoismegamer.github.io/free-potatoWhy/index1">Обо мне.</a></h3>
   <h1 style="backround-color: ghostwhite; color: red"><i>Изучаем английский язык.</i></h1>
   <h2 style="color: red">Обратите внимание!</h2>
